# BazaarRealmAPI

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  devserver.bat  devserver.sh  docker-compose-prod.yml  docker-compose.yml  sqlx-data.json
db/: reset_db.pgsql
db/migrations/: 20201111205247_initial.sql
migrations/: initial_schema.sql
src/: macros.rs  main.rs
src/caches/: cache.rs  cached_response.rs  mod.rs
src/db/: mod.rs  refinery.toml  reset_db.pgsql
src/db/migrations/: V1__initial.rs  V1__initial.sql  mod.rs
src/filters/: mod.rs
src/handlers/: interior_ref_list.rs  merchandise_list.rs  mod.rs  owner.rs  shop.rs  transaction.rs
src/models/: interior_ref.rs  interior_ref_list.rs  merchandise_list.rs  mod.rs  model.rs  owner.rs  shop.rs  transaction.rs
src/problem/: mod.rs
test_data/: interior_ref_list.json  interior_ref_lists.json  interior_refs.json  merchandise_list.json  owner.json  owner2.json  shop.json  shop2.json  transaction.json
